# FastestPizzaDelivery

./: .gitattributes  CMakeLists.txt  README.md
.github/workflows/: build.yml
include/: AssetManager.hpp  CollisionLayer.hpp  Command.hpp  Entity.hpp  Game.hpp  House.hpp  ICollidable.hpp  IDrawable.hpp  IPizzaConsumer.hpp  OrderPlacer.hpp  Pizza.hpp  PizzaTruck.hpp  Road.hpp  RoadStrip.hpp  Transformable.hpp  Tree.hpp  Vehicle.hpp
resources/models/houses/: house_type04.gltf
resources/models/pizza/: license.txt
resources/models/pizza_food_vendor_truck/: scene.gltf
resources/models/trees/: treeSmall.gltf
resources/models/vehicles/low-poly_car/: car.gltf
resources/pizza/: scene.gltf
src/: AssetManager.cpp  Entity.cpp  Game.cpp  House.cpp  OrderPlacer.cpp  Pizza.cpp  PizzaTruck.cpp  Road.cpp  RoadStrip.cpp  Transformable.cpp  Tree.cpp  Vehicle.cpp  main.cpp
